--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -130,6 +130,7 @@ map_index:
         status: In Betrieb
         kiddie: Verstecke Kinderachterbahnen
         notridden: Noch nicht gefahren
+        new: Neu diesem Monat
         score: Punktzahl
         atleast: "mindestens {count}"
         openingDate: Eröffnungsdatum
