--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -10,6 +10,9 @@ app:
         default: "Willkommen!"
     header:
         search: "Voltron, Holiday Park..."
+    search:
+        suggestions: "Suchvorschläge"
+        searching: "Suche läuft..."
 
 index:
     title: "Willkommen!"
@@ -469,4 +472,10 @@ search_index:
             =0 {Keine Benutzer gefunden}
             =1 {1 Benutzer gefunden}
             other {# Benutzer gefunden}
+        }
+    unified_results_found: >-
+        {num, plural,
+            =0 {Keine Ergebnisse für "{query}" gefunden}
+            =1 {1 Ergebnis für "{query}" gefunden}
+            other {# Ergebnisse für "{query}" gefunden}
         }
