fix coaster page completely

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -29,6 +29,8 @@ index:
 
 coaster:
     score:
+        title: "PUNKTZAHL"
+        rank: "RANG"
         scoreof: Punktzahl von
         ranked: Rang
         intheworld: Auf der Welt
