[#253] - Custom constraint to avoid wrong date formats in admin

--- a/translations/validators+intl-icu.en.yml
+++ b/translations/validators+intl-icu.en.yml
@@ -1,1 +1,6 @@
 top_coaster.duplicate: "{coaster} appears several times. Please remove duplicates."
+
+
+# Admin validators
+date_minimum:
+    error: Year must be at least 1800.
