--- a/translations/messages+intl-icu.en.yml
+++ b/translations/messages+intl-icu.en.yml
@@ -209,14 +209,13 @@ profile:
         explored_parks: "{count, plural, =1 {park} other {parks}}"
         visited_countries: "{count, plural, =1 {country} other {countries}}"
         top_country: "Top Country"
+        world_top_100: "World TOP 100"
+        operating_top_100: "Operating World TOP 100: {coasters}/100"
         top_manufacturer: "Top Manufacturer"
         favorite_manufacturer: "Favorite Manufacturer"
-        world_top_100: "World TOP 100"
-        operating_top_100: "Operating World TOP 100"
-        create_top_placeholder: "Create a top 10 to see your favorite manufacturer"
-        coaster_count: "{count, plural, =0 {no coasters} =1 {1 coaster} other {# coasters}}"
-        park_count: "{count, plural, =0 {no parks} =1 {1 park} other {# parks}}"
-        country_count: "{count, plural, =0 {no countries} =1 {1 country} other {# countries}}"
+        represented_manufacturer: "Most represented manufacturer in your top 10"
+        coaster_count: "{count, plural, =0 {No coasters} =1 {1 coaster} other {# coasters}}"
+        park_count: "{count, plural, =0 {No parks} =1 {1 park} other {# parks}}"
     ratings:
         title: "My Ratings"
     settings:
