[#245] - Merge filters translations

--- a/translations/messages+intl-icu.en.yml
+++ b/translations/messages+intl-icu.en.yml
@@ -142,31 +142,29 @@ coaster_ranking:
             short: "pairs"
             long: "analyzed pairs"
         users: "voters"
-    filter:
-        continent: "World"
-        country: "Country"
-        materialType: "Type"
-        seatingType: "Train"
-        model: "Model"
-        manufacturer: "Manufacturer"
-        openingDate: "Opening Date"
 
 map_index:
     title: "Coasters Map"
     description: "Discover where are the most amazing roller coasters nearby, the next year hits or the B&M you have not ridden yet with this interactive map."
-    filter:
-        title: "Filters"
-        manufacturer: "Manufacturer"
-        status: "Operating"
-        kiddie: "Hide kiddies"
-        notridden: "Not ridden yet"
-        new: "New this month"
-        score: "Score"
-        atleast: "at least {count}"
-        openingDate: "Opening date"
-        name: "Name"
-        clear: "Clear filters"
     results: "Results"
+
+filters:
+    title: "Filters"
+    continent: "World"
+    country: "Country"
+    materialType: "Type"
+    seatingType: "Train"
+    model: "Model"
+    manufacturer: "Manufacturer"
+    status: "Operating"
+    kiddie: "Hide kiddies"
+    notridden: "Not ridden yet"
+    new: "New this month"
+    score: "Score"
+    atleast: "at least {count}"
+    openingDate: "Opening date"
+    name: "Name"
+    clear: "Clear filters"
 
 user_profile:
     title: "{name} - Profile"
