--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -137,31 +137,29 @@ coaster_ranking:
             short: Paare
             long: analysierte Paare
         users: Wähler
-    filter:
-        continent: Welt
-        country: Land
-        materialType: Typ
-        seatingType: Zug
-        model: Modell
-        manufacturer: Hersteller
-        openingDate: Eröffnungsdatum
 
 map_index:
     title: Achterbahn Landkarte
     description: "Entdecke mit dieser interaktiven Karte, wo sich die coolsten Achterbahnen in der Nähe befinden, die besten des nächsten Jahres oder die B&M-Bahnen, die du bisher noch nicht gefahren bist."
-    filter:
-        title: Filter
-        manufacturer: Hersteller
-        status: In Betrieb
-        kiddie: Verstecke Kinderachterbahnen
-        notridden: Noch nicht gefahren
-        new: Neu diesem Monat
-        score: Punktzahl
-        atleast: "mindestens {count}"
-        openingDate: Eröffnungsdatum
-        name: Name
-        clear: "Filter löschen"
     results: Ergebnisse
+
+filters:
+    title: Filter
+    continent: Welt
+    country: Land
+    materialType: Typ
+    seatingType: Zug
+    model: Modell
+    manufacturer: Hersteller
+    status: In Betrieb
+    kiddie: Verstecke Kinderachterbahnen
+    notridden: Noch nicht gefahren
+    new: Neu diesem Monat
+    score: Punktzahl
+    atleast: "mindestens {count}"
+    openingDate: Eröffnungsdatum
+    name: Name
+    clear: Filter löschen
 
 user_profile:
     title: "{name} - Profil"
