--- a/translations/messages+intl-icu.fr.yml
+++ b/translations/messages+intl-icu.fr.yml
@@ -137,31 +137,29 @@ coaster_ranking:
             short: paires
             long: paires analysées
         users: votants
-    filter:
-        continent: Monde
-        country: Pays
-        materialType: Type
-        seatingType: Train
-        model: Modèle
-        manufacturer: Constructeur
-        openingDate: "Date d'ouverture"
 
 map_index:
     title: Carte des coasters
     description: "Découvre où sont les meilleurs coasters près de chez toi les nouveautés, où les B&M que tu n'as pas encore ridé sur cette carte interactive."
-    filter:
-        title: Filtres
-        manufacturer: Constructeur
-        status: En fonctionnement
-        kiddie: Masquer les kiddies
-        notridden: Pas encore ridé
-        new: Nouveau ce mois
-        score: Score
-        atleast: "au moins {count}"
-        openingDate: "Date d'ouverture"
-        name: Nom
-        clear: "Effacer les filtres"
     results: Résultats
+
+filters:
+    title: Filtres
+    continent: Monde
+    country: Pays
+    materialType: Type
+    seatingType: Train
+    model: Modèle
+    manufacturer: Constructeur
+    status: En fonctionnement
+    kiddie: Masquer les kiddies
+    notridden: Pas encore ridé
+    new: Nouveau ce mois
+    score: Score
+    atleast: "au moins {count}"
+    openingDate: "Date d'ouverture"
+    name: Nom
+    clear: Effacer les filtres
 
 user_profile:
     title: "Profil de {name}"
