[#245] - Fix loaders translations

--- a/translations/ai_summary+intl-icu.de.yml
+++ b/translations/ai_summary+intl-icu.de.yml
@@ -13,5 +13,6 @@ ai_summary:
         based_on: "KI-generierte Zusammenfassung basierend auf {count, plural, =1 {1 Bewertung} other {# Bewertungen}}"
     panel:
         title: "Kapitäns Bewertung"
+        loading: "Laden von KI-Zusammenfassung..."
         highlights: "Highlights"
         concerns: "Bedenken"
