--- a/translations/ai_summary+intl-icu.en.yml
+++ b/translations/ai_summary+intl-icu.en.yml
@@ -13,5 +13,6 @@ ai_summary:
         based_on: "AI-generated summary based on {count, plural, =1 {1 review} other {# reviews}}"
     panel:
         title: "Captain's Review"
+        loading: "Loading AI summary..."
         highlights: "Highlights"
         concerns: "Concerns"
