--- a/translations/ai_summary+intl-icu.fr.yml
+++ b/translations/ai_summary+intl-icu.fr.yml
@@ -13,5 +13,6 @@ ai_summary:
         based_on: "Résumé généré par IA basé sur {count, plural, =1 {1 avis} other {# avis}}"
     panel:
         title: "Avis du Capitaine"
+        loading: "Loading du résumé IA..."
         highlights: "Points forts"
         concerns: "Points d'attention"
